# Graph

./: main.py  pyproject.toml
algorithm/: Kruskal.py
search/: Dijkstra.py  breadth.py  depth.py
structure/: edge.py  exceptions.py  graph.py  node.py
view/: visualization.py
