[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["mnogoruk <lionless072@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.8"
numpy = "^1.20.2"
graphviz = "^0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
